--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^5.0.0-beta.1",
     "form-data": "^4.0.0",
+    "localtunnel": "^2.0.2",
     "ws": "^8.13.0"
   }
 }
