--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^5.0.0-beta.1",
     "form-data": "^4.0.0",
     "ws": "^8.13.0"
